deployment_files/application_install_files/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80
  ingressClassName: traefik
  rules:
    - host: argocd.local.example.com
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
